--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function toggleBar() {
     <span></span>
   </div>
 
-  <img class="profile-pic" src="/img/Untitled design.png" alt="Txilor Álvarez" />
+  <img class="profile-pic" src="img/Untitled design.png" alt="Txilor Álvarez" />
   <h1>Txilor Álvarez</h1>
   <p>Cybersecurity-Analyst</p>
   <p>Especialista en Ciberseguridad | Hacking Ético | OSINT</p>
