--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function toggleBar() {
 <div class="action-bar" id="actionBar">
   <a href="#inicio" title="Inicio"><i class="fas fa-home"></i></a>
   <a href="#contacto" title="Contacto"><i class="fas fa-envelope"></i></a>
-  <a href="/certificate/JHON TAILOR A..pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
+  <a href="certificate/JHON TAILOR A..pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
 </div>
 
 
@@ -61,7 +61,7 @@ function toggleBar() {
     <span></span>
   </div>
 
-  <img class="profile-pic" src="img/Untitled design.png" alt="Txilor Álvarez" />
+  <img class="profile-pic" src="img/Untitled design.png" alt="Txilor Alvarez" />
   <h1>Txilor Álvarez</h1>
   <p>Cybersecurity-Analyst</p>
   <p>Especialista en Ciberseguridad | Hacking Ético | OSINT</p>
@@ -83,29 +83,29 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
   <h2>Certifications</h2>
   <div class="carousel">
     <div class="slide">
-      <a href="/certificate/EthicalHacker_CISCO.pdf" target="_blank"> <span>CISCO</span>
-        <img src="/img/cisco.png" alt="CertificadoCISCO">
+      <a href="certificate/EthicalHacker_CISCO.pdf" target="_blank"> <span>CISCO</span>
+        <img src="img/cisco.png" alt="CertificadoCISCO">
       </a>
     </div>
     <div class="slide">
-      <a href="/certificate/CertificadoGoogleCoursera 228LUVCFJT8U.pdf" target="_blank"> <span>Google</span> 
-        <img src="/img/Screenshot 2025-07-11 084753.png" alt="Certificado Google">
+      <a href="certificate/CertificadoGoogleCoursera 228LUVCFJT8U.pdf" target="_blank"> <span>Google</span> 
+        <img src="img/Screenshot 2025-07-11 084753.png" alt="Certificado Google">
       </a>
     </div>
     <div class="slide">
-      <a href="/certificate/CS50 Cybersecurity.pdf" target="_blank"> <span>Harvard CS50</span>
-        <img src="/img/harvard.png" alt="Certificado Harvard CS50">
+      <a href="certificate/CS50 Cybersecurity.pdf" target="_blank"> <span>Harvard CS50</span>
+        <img src="img/harvard.png" alt="Certificado Harvard CS50">
       </a>
     </div>
     <!-- Agrega más .slide según necesidad -->
      <div class="slide">
-      <a href="/certificate/Certificate_Microsoft .pdf" target="_blank"> <span>Microsoft</span> 
-        <img src="/img/microsoft.png" alt="Certificado Microsoft">
+      <a href="certificate/Certificate_Microsoft .pdf" target="_blank"> <span>Microsoft</span> 
+        <img src="img/microsoft.png" alt="Certificado Microsoft">
       </a>
     </div>
     <div class="slide">
-      <a href="/certificate/Coursera_BBVA_Manager_certificate.pdf" target="_blank"> <span>Coursera</span> 
-        <img src="/img/bbva.png" alt="Certificado Coursera">
+      <a href="certificate/Coursera_BBVA_Manager_certificate.pdf" target="_blank"> <span>Coursera</span> 
+        <img src="img/bbva.png" alt="Certificado Coursera">
       </a>
     </div>
   </div>
@@ -117,25 +117,25 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
     <li>
       <a href="https://github.com/tuusuario/proyecto-1" target="_blank">
         <span> Quantum Computer</span>
-        <img src="/img/ChatGPT Image May 6, 2025, 01_08_13 AM.png" alt="Wireshark">
+        <img src="img/ChatGPTImageMay6,2025,01_08_13 AM.png" alt="Wireshark">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-2" target="_blank">
         <span>KALI Linux Principios</span>
-        <img src="/img/Create an image of terminal command and the dragon of linux back. .jpg" alt="SQL Injection">
+        <img src="img/Create an image of terminal command and the dragon of linux back. .jpg" alt="SQL Injection">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-3" target="_blank">
         <span>SQL Injection </span>
-        <img src="/img/Screenshot 2025-02-01 202728.png" alt="KALI Linux">
+        <img src="img/Screenshot 2025-02-01 202728.png" alt="KALI Linux">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-4" target="_blank">
         <span> Análisis de red en Wireshark </span>
-        <img src="/img/cisco1.png" alt="Quantum Computer">
+        <img src="img/cisco1.png" alt="Quantum Computer">
       </a>
     </li>
   </ul>
