--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function toggleBar() {
     <span></span>
   </div>
 
-  <img class="profile-pic" src="img/Untitled design.png" alt="Txilor Alvarez" />
+  <img class="profile-pic" src="img/profile.png" alt="Txilor Alvarez" />
   <h1>Txilor Álvarez</h1>
   <p>Cybersecurity-Analyst</p>
   <p>Especialista en Ciberseguridad | Hacking Ético | OSINT</p>
@@ -89,7 +89,7 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
     </div>
     <div class="slide">
       <a href="certificate/CertificadoGoogleCoursera 228LUVCFJT8U.pdf" target="_blank"> <span>Google</span> 
-        <img src="img/Screenshot 2025-07-11 084753.png" alt="Certificado Google">
+        <img src="img/google.png" alt="Certificado Google">
       </a>
     </div>
     <div class="slide">
@@ -117,19 +117,19 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
     <li>
       <a href="https://github.com/tuusuario/proyecto-1" target="_blank">
         <span> Quantum Computer</span>
-        <img src="img/ChatGPTImageMay6,2025,01_08_13 AM.png" alt="Wireshark">
+        <img src="img/quantic.png" alt="Wireshark">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-2" target="_blank">
         <span>KALI Linux Principios</span>
-        <img src="img/Create an image of terminal command and the dragon of linux back. .jpg" alt="SQL Injection">
+        <img src="img/linux.jpg" alt="SQL Injection">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-3" target="_blank">
         <span>SQL Injection </span>
-        <img src="img/Screenshot 2025-02-01 202728.png" alt="KALI Linux">
+        <img src="img/sql.png" alt="KALI Linux">
       </a>
     </li>
     <li>
