--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function toggleBar() {
 <div class="action-bar" id="actionBar">
   <a href="#inicio" title="Inicio"><i class="fas fa-home"></i></a>
   <a href="#contacto" title="Contacto"><i class="fas fa-envelope"></i></a>
-  <a href="certificate/JHON TAILOR A..pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
+  <a href="certificate/JHON_TAILOR_A..pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
 </div>
 
 
