--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
       </a>
     </div>
     <div class="slide">
-      <a href="certificate/CertificadoGoogleCoursera 228LUVCFJT8U.pdf" target="_blank"> <span>Google</span> 
+      <a href="certificate/CertificadoGoogleCoursera228LUVCFJT8U.pdf" target="_blank"> <span>Google</span> 
         <img src="img/google.png" alt="Certificado Google">
       </a>
     </div>
     <div class="slide">
-      <a href="certificate/CS50 Cybersecurity.pdf" target="_blank"> <span>Harvard CS50</span>
+      <a href="certificate/CS50Cybersecurity.pdf" target="_blank"> <span>Harvard CS50</span>
         <img src="img/harvard.png" alt="Certificado Harvard CS50">
       </a>
     </div>
     <!-- Agrega más .slide según necesidad -->
      <div class="slide">
-      <a href="certificate/Certificate_Microsoft .pdf" target="_blank"> <span>Microsoft</span> 
+      <a href="certificate/Certificate_Microsoft.pdf" target="_blank"> <span>Microsoft</span> 
         <img src="img/microsoft.png" alt="Certificado Microsoft">
       </a>
     </div>
