--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function toggleBar() {
 <div class="action-bar" id="actionBar">
   <a href="#inicio" title="Inicio"><i class="fas fa-home"></i></a>
   <a href="#contacto" title="Contacto"><i class="fas fa-envelope"></i></a>
-  <a href="certificate/JHON_TAILOR_A..pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
+  <a href="certificate/cv.pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
 </div>
 
 
@@ -88,23 +88,23 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
       </a>
     </div>
     <div class="slide">
-      <a href="certificate/CertificadoGoogleCoursera228LUVCFJT8U.pdf" target="_blank"> <span>Google</span> 
+      <a href="certificate/Google.pdf" target="_blank"> <span>Google</span> 
         <img src="img/google.png" alt="Certificado Google">
       </a>
     </div>
     <div class="slide">
-      <a href="certificate/CS50Cybersecurity.pdf" target="_blank"> <span>Harvard CS50</span>
+      <a href="certificate/CS50.pdf" target="_blank"> <span>Harvard CS50</span>
         <img src="img/harvard.png" alt="Certificado Harvard CS50">
       </a>
     </div>
     <!-- Agrega más .slide según necesidad -->
      <div class="slide">
-      <a href="certificate/Certificate_Microsoft.pdf" target="_blank"> <span>Microsoft</span> 
+      <a href="certificate/Microsoft.pdf" target="_blank"> <span>Microsoft</span> 
         <img src="img/microsoft.png" alt="Certificado Microsoft">
       </a>
     </div>
     <div class="slide">
-      <a href="certificate/Coursera_BBVA_Manager_certificate.pdf" target="_blank"> <span>Coursera</span> 
+      <a href="certificate/BBVA.pdf" target="_blank"> <span>Coursera</span> 
         <img src="img/bbva.png" alt="Certificado Coursera">
       </a>
     </div>
