--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ function toggleBar() {
 
 <header>
   <div class="binary-background">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
+    <span>0101010101</span>
+    <span>01010101010101010101</span>
+    <span>0101010101</span>
+    <span>01010101010101010101</span>
+    <span>0101010101</span>
+    <span>010101010101010101010101010101</span>
+    <span>00101010101</span>
+    <span>010101101001</span>
   </div>
 
   <img class="profile-pic" src="img/profile.png" alt="Txilor Alvarez" />
