--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ function toggleBar() {
 
 <!-- Barra lateral funcional -->
 <div class="action-bar" id="actionBar">
-  <a href="#inicio" title="Inicio"><i class="fas fa-home"></i></a>
-  <a href="#contacto" title="Contacto"><i class="fas fa-envelope"></i></a>
+  <a href="/" title="Inicio"><i class="fas fa-home"></i></a>
+  <a href="mailto:txilor_alvarez@proton.me" title="Email"><i class="fas fa-envelope"></i></a>
   <a href="certificate/cv.pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
 </div>
 
@@ -46,9 +46,10 @@ function toggleBar() {
     <a href="https://www.linkedin.com/in/tailor-alvarez-0b7959363/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
     <a href="https://github.com/TxilorAlvarez" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
     <a href="https://www.youtube.com/@txilor_alvarez" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
-    <a href="https://twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
-    <a href="https://t.me/" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
-    <a href="mailto:txilor_alvarez@proton.me" title="Email"><i class="fas fa-envelope"></i></a>
+    <a href="https://www.tiktok.com/@tu_usuario" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
+    <a href="https://kick.com/tu_usuario" target="_blank" title="Kick"><i class="fas fa-gamepad"></i></a>
+    <a href="https://www.instagram.com/tu_usuario" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+    
   </div>
 </section>
 
