--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function toggleBar() {
   <img class="profile-pic" src="img/profile.png" alt="Txilor Alvarez" />
   <h1>Txilor Álvarez</h1>
   <p>Cybersecurity-Analyst</p>
-  <p>Especialista en Ciberseguridad | Hacking Ético | OSINT</p>
+  <p>Especialista en Ciberseguridad | Hacking Ético | Pentester</p>
 </header>
 
 
