--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function toggleBar() {
 
 <!-- Barra lateral funcional -->
 <div class="action-bar" id="actionBar">
-  <a href="/" title="Inicio"><i class="fas fa-home"></i></a>
+  <a href="/txilor" title="Inicio"><i class="fas fa-home"></i></a>
   <a href="mailto:txilor_alvarez@proton.me" title="Email"><i class="fas fa-envelope"></i></a>
   <a href="certificate/cv.pdf" download title="Descargar CV"><i class="fas fa-file-download"></i></a>
 </div>
