--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function toggleBar() {
     <a href="https://www.linkedin.com/in/tailor-alvarez-0b7959363/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
     <a href="https://github.com/TxilorAlvarez" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
     <a href="https://www.youtube.com/@txilor_alvarez" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
-    <a href="https://www.tiktok.com/@tu_usuario" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
+    <a href="https://www.tiktok.com/@txilor_alvarez" target="_blank" title="TikTok"><i class="fab fa-tiktok"></i></a>
     <a href="https://kick.com/tu_usuario" target="_blank" title="Kick"><i class="fas fa-gamepad"></i></a>    
   </div>
 </section>
