--- a/index.html
+++ b/index.html
@@ -119,25 +119,25 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
     <li>
       <a href="https://github.com/TxilorAlvarez/Quantic_Jared" target="_blank">
         <span> Quantum Computer</span>
-        <img src="img/quantic.png" alt="Wireshark">
+        <img src="img/Quantic.jpg" alt="Quantic">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-2" target="_blank">
         <span>KALI Linux Principios</span>
-        <img src="img/linux.jpg" alt="SQL Injection">
+        <img src="img/linux.jpg" alt="Linux">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-3" target="_blank">
         <span>SQL Injection </span>
-        <img src="img/sql.png" alt="KALI Linux">
+        <img src="img/SQL.jpg" alt="SQL">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-4" target="_blank">
         <span>  Wireshark </span>
-        <img src="img/cisco1.png" alt="Quantum Computer">
+        <img src="img/Wireshark.jpg" alt="Wireshark">
       </a>
     </li>
   </ul>
