--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function toggleBar() {
 Certified by Google in Cybersecurity and trained through Harvard’s CS50, I apply structured methodologies to protect digital environments and support secure infrastructure across diverse platforms.
   </p>
   <p>(ES)
-    Profesional apasionado por la seguridad digital, con experiencia en pruebas de penetración, análisis de vulnerabilidades, OSINT y defensa de sistemas. Apunto a compartir conocimientos y brindar soluciones seguras a empresas y particulares.
+    Profesional apasionado por la seguridad digital, con experiencia en pruebas de escaner, análisis de vulnerabilidades, defensa de sistemas. Creciendo en los conocimientos que puedan brindar soluciones seguras a empresas y particulares.
   </p>
  
 </section>
@@ -119,12 +119,14 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
     <li>
       <a href="https://github.com/TxilorAlvarez/Quantic_Jared" target="_blank">
         <span> Quantum Computer</span>
+        Check the future of quanting computer...
         <img src="img/Quantic.jpg" alt="Quantic">
       </a>
     </li>
     <li>
       <a href="https://github.com/tuusuario/proyecto-2" target="_blank">
-        <span>KALI Linux Principios</span>
+        <span>KALI Linux </span>
+        Use the most powerfull OS to solve issues...
         <img src="img/linux.jpg" alt="Linux">
       </a>
     </li>
