--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
       </a>
     </li>
     <li>
-      <a href="https://github.com/tuusuario/proyecto-2" target="_blank">
-        <span>KALI Linux </span>
-        <img src="img/linux.jpg" alt="Linux">
+      <a href="https://github.com/TxilorAlvarez/CEA" target="_blank">
+        <span>CEA (Python) </span>
+        <img src="img/cea.jpg" alt="Cea">
       </a>
     </li>
     <li>
