--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
       </a>
     </li>
     <li>
-      <a href="https://github.com/tuusuario/proyecto-3" target="_blank">
-        <span>SQL Injection </span>
-        <img src="img/SQL.jpg" alt="SQL">
+      <a href="https://github.com/TxilorAlvarez/Cybersecurity" target="_blank">
+        <span>  Cybersecurity </span>
+        <img src="img/linux.jpg" alt="Cybersecurity">
       </a>
     </li>
     <li>
-      <a href="https://github.com/tuusuario/proyecto-4" target="_blank">
-        <span>  Wireshark </span>
-        <img src="img/Wireshark.jpg" alt="Wireshark">
+       <a href="https://github.com/TxilorAlvarez/txilor" target="_blank">
+        <span>SQL Injection </span>
+        <img src="img/SQL.jpg" alt="SQL">
       </a>
     </li>
   </ul>
