--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@ Certified by Google in Cybersecurity and trained through Harvard’s CS50, I app
       </a>
     </li>
     <li>
-       <a href="https://github.com/TxilorAlvarez/txilor" target="_blank">
-        <span>SQL Injection </span>
-        <img src="img/SQL.jpg" alt="SQL">
+       <a href="https://github.com/TxilorAlvarez/Azure-vm-lab" target="_blank">
+        <span>Azure-vm</span>
+        <img src="img/azure.jpg" alt="Azure">
       </a>
     </li>
   </ul>
